libqt6c/src/libqtextformat.hpp

typedef struct QBrush QBrush;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextImageFormat QTextImageFormat;
typedef struct QTextListFormat QTextListFormat;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
QTextBlockFormat* QTextFormat_ToBlockFormat(const QTextFormat* self);
QTextCharFormat* QTextFormat_ToCharFormat(const QTextFormat* self);
QTextListFormat* QTextFormat_ToListFormat(const QTextFormat* self);
QTextTableFormat* QTextFormat_ToTableFormat(const QTextFormat* self);
QTextFrameFormat* QTextFormat_ToFrameFormat(const QTextFormat* self);
QTextImageFormat* QTextFormat_ToImageFormat(const QTextFormat* self);
QTextTableCellFormat* QTextFormat_ToTableCellFormat(const QTextFormat* self);
void QTextFormat_SetLayoutDirection(QTextFormat* self, int direction);
int QTextFormat_LayoutDirection(const QTextFormat* self);
void QTextFormat_SetBackground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Background(const QTextFormat* self);
void QTextFormat_ClearBackground(QTextFormat* self);
void QTextFormat_SetForeground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Foreground(const QTextFormat* self);
void QTextFormat_ClearForeground(QTextFormat* self);
QTextBlockFormat* QTextBlockFormat_new();
QTextBlockFormat* QTextBlockFormat_new2(const QTextBlockFormat* param1);
bool QTextBlockFormat_IsValid(const QTextBlockFormat* self);
void QTextBlockFormat_SetAlignment(QTextBlockFormat* self, int alignment);
int QTextBlockFormat_Alignment(const QTextBlockFormat* self);
void QTextBlockFormat_SetTopMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_TopMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetBottomMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_BottomMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetLeftMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_LeftMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetRightMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_RightMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetTextIndent(QTextBlockFormat* self, double aindent);
double QTextBlockFormat_TextIndent(const QTextBlockFormat* self);
void QTextBlockFormat_SetIndent(QTextBlockFormat* self, int indent);
int QTextBlockFormat_Indent(const QTextBlockFormat* self);
void QTextBlockFormat_SetHeadingLevel(QTextBlockFormat* self, int alevel);
int QTextBlockFormat_HeadingLevel(const QTextBlockFormat* self);
void QTextBlockFormat_SetLineHeight(QTextBlockFormat* self, double height, int heightType);
double QTextBlockFormat_LineHeight(const QTextBlockFormat* self, double scriptLineHeight, double scaling);
double QTextBlockFormat_LineHeight2(const QTextBlockFormat* self);
int QTextBlockFormat_LineHeightType(const QTextBlockFormat* self);
void QTextBlockFormat_SetNonBreakableLines(QTextBlockFormat* self, bool b);
bool QTextBlockFormat_NonBreakableLines(const QTextBlockFormat* self);
void QTextBlockFormat_SetPageBreakPolicy(QTextBlockFormat* self, int flags);
int QTextBlockFormat_PageBreakPolicy(const QTextBlockFormat* self);
void QTextBlockFormat_SetTabPositions(QTextBlockFormat* self, const libqt_list /* of QTextOption__Tab* */ tabs);
libqt_list /* of QTextOption__Tab* */ QTextBlockFormat_TabPositions(const QTextBlockFormat* self);
void QTextBlockFormat_SetMarker(QTextBlockFormat* self, int marker);
int QTextBlockFormat_Marker(const QTextBlockFormat* self);
void QTextBlockFormat_Delete(QTextBlockFormat* self);