QtBeef/src/Qt/qtextformat.bf

	public QTextBlockFormat_Ptr ToBlockFormat()
	{
		return QTextBlockFormat_Ptr(CQt.QTextFormat_ToBlockFormat((.)this.ptr.Ptr));
	}
	public QTextCharFormat_Ptr ToCharFormat()
	{
		return QTextCharFormat_Ptr(CQt.QTextFormat_ToCharFormat((.)this.ptr.Ptr));
	}
	public QTextListFormat_Ptr ToListFormat()
	{
		return QTextListFormat_Ptr(CQt.QTextFormat_ToListFormat((.)this.ptr.Ptr));
	}
	public QTextTableFormat_Ptr ToTableFormat()
	{
		return QTextTableFormat_Ptr(CQt.QTextFormat_ToTableFormat((.)this.ptr.Ptr));
	}
	public QTextFrameFormat_Ptr ToFrameFormat()
	{
		return QTextFrameFormat_Ptr(CQt.QTextFormat_ToFrameFormat((.)this.ptr.Ptr));
	}
	public QTextImageFormat_Ptr ToImageFormat()
	{
		return QTextImageFormat_Ptr(CQt.QTextFormat_ToImageFormat((.)this.ptr.Ptr));
	}
	public QTextTableCellFormat_Ptr ToTableCellFormat()
	{
		return QTextTableCellFormat_Ptr(CQt.QTextFormat_ToTableCellFormat((.)this.ptr.Ptr));
	}
	public void SetLayoutDirection(Qt_LayoutDirection direction)
	{
		CQt.QTextFormat_SetLayoutDirection((.)this.ptr.Ptr, direction);
	}
	public Qt_LayoutDirection LayoutDirection()
	{
		return CQt.QTextFormat_LayoutDirection((.)this.ptr.Ptr);
	}
	public void SetBackground(IQBrush brush)
	{
		CQt.QTextFormat_SetBackground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Background()
	{
		return QBrush_Ptr(CQt.QTextFormat_Background((.)this.ptr.Ptr));
	}
	public void ClearBackground()
	{
		CQt.QTextFormat_ClearBackground((.)this.ptr.Ptr);
	}
	public void SetForeground(IQBrush brush)
	{
		CQt.QTextFormat_SetForeground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Foreground()
	{
		return QBrush_Ptr(CQt.QTextFormat_Foreground((.)this.ptr.Ptr));
	}
	public void ClearForeground()
	{
		CQt.QTextFormat_ClearForeground((.)this.ptr.Ptr);
	}
}
interface IQTextCharFormat : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextBlockFormat
// --------------------------------------------------------------
[CRepr]
struct QTextBlockFormat_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextBlockFormat_new")]
	public static extern QTextBlockFormat_Ptr QTextBlockFormat_new();
	[LinkName("QTextBlockFormat_new2")]
	public static extern QTextBlockFormat_Ptr QTextBlockFormat_new2(void** param1);
	[LinkName("QTextBlockFormat_Delete")]
	public static extern void QTextBlockFormat_Delete(QTextBlockFormat_Ptr self);
	[LinkName("QTextBlockFormat_IsValid")]
	public static extern bool QTextBlockFormat_IsValid(void* self);
	[LinkName("QTextBlockFormat_SetAlignment")]
	public static extern void QTextBlockFormat_SetAlignment(void* self, void* alignment);
	[LinkName("QTextBlockFormat_Alignment")]
	public static extern void* QTextBlockFormat_Alignment(void* self);
	[LinkName("QTextBlockFormat_SetTopMargin")]
	public static extern void QTextBlockFormat_SetTopMargin(void* self, double margin);
	[LinkName("QTextBlockFormat_TopMargin")]
	public static extern double QTextBlockFormat_TopMargin(void* self);
	[LinkName("QTextBlockFormat_SetBottomMargin")]
	public static extern void QTextBlockFormat_SetBottomMargin(void* self, double margin);
	[LinkName("QTextBlockFormat_BottomMargin")]
	public static extern double QTextBlockFormat_BottomMargin(void* self);
	[LinkName("QTextBlockFormat_SetLeftMargin")]
	public static extern void QTextBlockFormat_SetLeftMargin(void* self, double margin);
	[LinkName("QTextBlockFormat_LeftMargin")]
	public static extern double QTextBlockFormat_LeftMargin(void* self);
	[LinkName("QTextBlockFormat_SetRightMargin")]
	public static extern void QTextBlockFormat_SetRightMargin(void* self, double margin);
	[LinkName("QTextBlockFormat_RightMargin")]
	public static extern double QTextBlockFormat_RightMargin(void* self);
	[LinkName("QTextBlockFormat_SetTextIndent")]
	public static extern void QTextBlockFormat_SetTextIndent(void* self, double aindent);
	[LinkName("QTextBlockFormat_TextIndent")]
	public static extern double QTextBlockFormat_TextIndent(void* self);
	[LinkName("QTextBlockFormat_SetIndent")]
	public static extern void QTextBlockFormat_SetIndent(void* self, c_int indent);
	[LinkName("QTextBlockFormat_Indent")]
	public static extern c_int QTextBlockFormat_Indent(void* self);
	[LinkName("QTextBlockFormat_SetHeadingLevel")]
	public static extern void QTextBlockFormat_SetHeadingLevel(void* self, c_int alevel);
	[LinkName("QTextBlockFormat_HeadingLevel")]
	public static extern c_int QTextBlockFormat_HeadingLevel(void* self);
	[LinkName("QTextBlockFormat_SetLineHeight")]
	public static extern void QTextBlockFormat_SetLineHeight(void* self, double height, c_int heightType);
	[LinkName("QTextBlockFormat_LineHeight")]
	public static extern double QTextBlockFormat_LineHeight(void* self, double scriptLineHeight, double scaling);
	[LinkName("QTextBlockFormat_LineHeight2")]
	public static extern double QTextBlockFormat_LineHeight2(void* self);
	[LinkName("QTextBlockFormat_LineHeightType")]
	public static extern c_int QTextBlockFormat_LineHeightType(void* self);
	[LinkName("QTextBlockFormat_SetNonBreakableLines")]
	public static extern void QTextBlockFormat_SetNonBreakableLines(void* self, bool b);
	[LinkName("QTextBlockFormat_NonBreakableLines")]
	public static extern bool QTextBlockFormat_NonBreakableLines(void* self);
	[LinkName("QTextBlockFormat_SetPageBreakPolicy")]
	public static extern void QTextBlockFormat_SetPageBreakPolicy(void* self, void* flags);
	[LinkName("QTextBlockFormat_PageBreakPolicy")]
	public static extern void* QTextBlockFormat_PageBreakPolicy(void* self);
	[LinkName("QTextBlockFormat_SetTabPositions")]
	public static extern void QTextBlockFormat_SetTabPositions(void* self, void** tabs);
	[LinkName("QTextBlockFormat_TabPositions")]
	public static extern void* QTextBlockFormat_TabPositions(void* self);
	[LinkName("QTextBlockFormat_SetMarker")]
	public static extern void QTextBlockFormat_SetMarker(void* self, QTextBlockFormat_MarkerType marker);
	[LinkName("QTextBlockFormat_Marker")]
	public static extern QTextBlockFormat_MarkerType QTextBlockFormat_Marker(void* self);
}
